🎥 Upgrade to JDK 16 and recent Axon versions